# candystore

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: rust.yml
candy-crasher/: .gitignore  Cargo.toml  README.md
candy-crasher/src/: main.rs
candy-longliving/: Cargo.toml
candy-longliving/src/: main.rs
candy-perf/: Cargo.toml  README.md
candy-perf/src/: main.rs
examples/: atomics.rs  collections.rs  lists.rs  multithreaded.rs  simple.rs  typed.rs
mini-candy/: Cargo.toml  README.md
mini-candy/src/: main.rs
simulator/: Cargo.toml  README.md
simulator/src/: main.rs
src/: collections.rs  encodable.rs  hashing.rs  insert.rs  insertion.rs  lib.rs  list_insert.rs  list_remove.rs  lists.rs  queues.rs  router.rs  shard.rs  stats.rs  store.rs  typed.rs
test-list-collisions/: Cargo.toml
test-list-collisions/src/: main.rs
tests/: test_atomics.rs  test_bigval.rs  test_collections.rs  test_flush_agg.rs  test_get_or_insert.rs  test_list_collisions.rs  test_lists.rs  test_loading.rs  test_logic.rs  test_merge.rs  test_modify_inplace.rs  test_multithreading.rs  test_mutlithreading.rs  test_pre_split.rs  test_queues.rs  test_typed.rs  tests.rs
tests/common/: mod.rs
vicky-crasher/: Cargo.toml
vicky-crasher/src/: main.rs
vicky-longliving/: .gitignore  Cargo.toml
vicky-longliving/src/: main.rs
vicky-perf/: Cargo.toml  README.md
vicky-perf/src/: main.rs
