[package]
name = "vicky-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["key-value", "persistent", "store"]
description = "A lean, efficient and fast peristent in-process key-value store"

[dependencies]
databuf = "0.5.0"
memmap = "0.7.0"
simd-itertools = "0.2.3"
siphasher = "1.0.1"

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = [
    "simulator"
]
