[package]
name = "vicky-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["key-value", "persistent", "store"]
description = "A lean, efficient and fast peristent in-process key-value store"

[dependencies]
bytemuck = { version = "1.16.3", features = ["derive"] }
databuf = "0.5.0"
memmap = "0.7.0"
simd-itertools = "0.2.3"
siphasher = "1.0.1"
anyhow = "1.0.86"
parking_lot = "0.12.3"

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = [
    "simulator"
    , "vicky-crasher", "vicky-perf"]
